--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>Continuar estudando e evoluindo como programador.</li>
         </ul>
 
-        <a href="https://www.linkedin.com/in/oliver-caputo" target="blank">Meu Linkedin</a>
+        <a href="https://www.linkedin.com/in/olivercaputo" target="blank">Meu Linkedin</a>
 
         <h2>Pessoas que eu gostaria que estivessem no DevClub</h2>
 
